--- a/Seminar5/Seminar5.vcxproj
+++ b/Seminar5/Seminar5.vcxproj
@@ -143,9 +143,11 @@
     <ClCompile Include="Auto.cpp" />
     <ClCompile Include="AutoController.cpp" />
     <ClCompile Include="AutoInMemoryRepository.cpp" />
+    <ClCompile Include="BubbleSorter.cpp" />
     <ClCompile Include="CrudRepository.cpp" />
     <ClCompile Include="Kunde.cpp" />
     <ClCompile Include="Reservierung.cpp" />
+    <ClCompile Include="StandardStorter.cpp" />
     <ClCompile Include="Teste.cpp" />
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
@@ -154,10 +156,14 @@
     <ClInclude Include="Auto.h" />
     <ClInclude Include="AutoController.h" />
     <ClInclude Include="AutoInMemoryRepository.h" />
+    <ClInclude Include="BubbleSorter.h" />
     <ClInclude Include="CrudRepository.h" />
     <ClInclude Include="Kunde.h" />
     <ClInclude Include="Reservierung.h" />
+    <ClInclude Include="Sorter.h" />
+    <ClInclude Include="StandardStorter.h" />
     <ClInclude Include="UI.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
